--- a/input/titlepage.tex
+++ b/input/titlepage.tex
@@ -29,7 +29,8 @@ Bachelor of Technology\\
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 {Submitted To:} \\
-\textnormal{Sukhjit Singh Sehra\\                                                                                                                          
+\textnormal{Sukhjit Singh Sehra\\
+Training Coordinator\\                                                                                                                          
 CSE Department} % Supervisor's Name
 \end{flushright}
 \end{minipage}\\[2cm]
