report tex file

--- a/report.tex
+++ b/report.tex
@@ -39,10 +39,10 @@
 \pagenumbering{Roman}
 \cfoot{\thepage}
 
-\input{input/acknowledgement.tex}
+\input{input/abstract.tex}
 \newpage
 
-\input{input/abstract.tex}
+\input{input/acknowledgement.tex}
 
 \newpage
 \tableofcontents
@@ -57,20 +57,18 @@
 \chapter{Introduction To Organisation}
 \input{input/organisation.tex}
 \newpage
-\chapter{\LaTeX}
-\input{input/latex.tex}
+%\chapter{\LaTeX}
+%\input{input/latex.tex}
 \chapter{Introduction To Project}
 \input{input/project-preview.tex}
-\chapter{Requirements and Analysis}
-\input{input/req-n-ana.tex}
-\chapter{Technologies Used}
-\input{input/techno-used.tex}
-\chapter{Design}
+\chapter{Product Design}
 \input{input/design.tex}
-\chapter{Implementation}
+%\chapter{Technologies Used}
+%\input{input/techno-used.tex}
+\chapter{Development and Implementation}
 \input{input/implement.tex}
-\chapter{Prject Legacy}
-\input{input/legacy.tex}
-\input{input/bibliography.tex}
+\chapter{Conclusion and Future Scope}
+\input{input/conclusion.tex}
+\input{input/references.tex}
 \end{document}
 
